--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@ html {
 }
 
 .page {
+  display: flex;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -16,6 +18,8 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  font-style: normal;
+  font-weight: 400;
 }
 
 h1,
@@ -35,4 +39,267 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+fieldset {
+  border: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  gap: 30px;
+  align-items: end;
+  width: 1140px;
+  height: 534px;
+  margin: auto;
+}
+
+.result__video-container {
+  position: relative;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 225px 212px 194px;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.search-form__label {
+  width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  color: rgba(255 255 255 / 0.7);
+  font-family: 'Fira Sans Condensed';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  background-color: transparent;
+  width: 100%;
+  padding: 0;
+  border: 0;
+  appearance: none;
+  height: 27px;
+}
+
+.search-form__label:has(.search-form__textfield) {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding-top: 2px;
+  padding-bottom: 1px;
+}
+
+.search-form__label:has(:focus) {
+  outline: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label:hover {
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  color: #fff;
+  text-underline-offset: 6px;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 5px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  margin-bottom: 5px;
+  gap: 15px;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+}
+
+input[type='checkbox']:checked + .search-form__pseudo-checkbox {
+  -webkit-box-shadow:
+    inset 0 0 0 1px #000,
+    inset 0 0 0 2px #fff;
+  -moz-box-shadow:
+    inset 0 0 0 1px #000,
+    inset 0 0 0 2px #fff;
+  box-shadow:
+    inset 0 0 0 1px #000,
+    inset 0 0 0 2px #fff;
+  background-color: #fff;
+}
+
+.search-form__label:active {
+  border: 0;
+  cursor: none;
+  text-decoration: none;
+}
+
+.button {
+  cursor: pointer;
+  color: #fff;
+  text-align: center;
+  font-family: 'Fira Sans Condensed';
+  font-size: 18px;
+  font-weight: 700;
+  border: 1px solid #fff;
+  width: 100%;
+  background-color: transparent;
+  padding: 0;
+  height: 34px;
+}
+
+.more-button {
+  margin: 1px;
+  width: 397px;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.button:hover {
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  color: #fff;
+  text-underline-offset: 6px;
+}
+
+.button:active {
+  background-color: #545050;
+  cursor: none;
+  text-decoration: none;
+}
+
+.content__details {
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  padding-bottom: 22px;
+  padding-top: 3px;
+  font-family: Oswald;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  position: relative;
+  height: 298px;
+  width: 100%;
+  overflow: auto;
+}
+
+.content__list li:not(:last-child) {
+  padding-bottom: 30px;
+}
+
+.content__card-link {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  margin: 2px;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__card-link:hover {
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  color: #fff;
+  text-underline-offset: 6px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 1fr 194px;
+  align-items: start;
+}
+
+.content__video-card-description-container {
+  height: 100%;
+  padding: 2px;
+}
+
+.content__video-card-title {
+  font-family: Oswald;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+  padding-bottom: 4px;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+}
+
+.content__video-card-thumbnail {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  width: 100%;
 }
