--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,6 @@ fieldset {
   gap: 30px;
   align-items: end;
   width: 1140px;
-  height: 534px;
   margin: auto;
 }
 
@@ -91,8 +90,8 @@ fieldset {
 }
 
 .search-form__textfield {
-  color: rgba(255 255 255 / 0.7);
-  font-family: 'Fira Sans Condensed';
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -103,17 +102,10 @@ fieldset {
   border: 0;
   appearance: none;
   height: 27px;
-}
-
-.search-form__label:has(.search-form__textfield) {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   padding-top: 2px;
   padding-bottom: 1px;
-}
-
-.search-form__label:has(:focus) {
-  outline: none;
 }
 
 .search-form__textfield:focus {
@@ -128,8 +120,7 @@ fieldset {
 .search-form__label:hover {
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
-  color: #fff;
-  text-underline-offset: 6px;
+  text-underline-offset: 1px;
 }
 
 .search-form__fieldset-title {
@@ -164,17 +155,11 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
   background-color: #fff;
 }
 
-.search-form__label:active {
-  border: 0;
-  cursor: none;
-  text-decoration: none;
-}
-
 .button {
   cursor: pointer;
   color: #fff;
   text-align: center;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 700;
   border: 1px solid #fff;
@@ -201,8 +186,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .button:hover {
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
-  color: #fff;
-  text-underline-offset: 6px;
+  text-underline-offset: 1px;
 }
 
 .button:active {
@@ -219,7 +203,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .title {
   padding-bottom: 22px;
   padding-top: 3px;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 75px;
   font-weight: 700;
   line-height: 94%;
@@ -237,7 +221,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
   overflow: auto;
 }
 
-.content__list li:not(:last-child) {
+.content__list .content__list-item:not(:last-child) {
   padding-bottom: 30px;
 }
 
@@ -260,8 +244,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .content__card-link:hover {
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
-  color: #fff;
-  text-underline-offset: 6px;
+  text-underline-offset: 1px;
 }
 
 .content__card-link:active {
@@ -281,11 +264,10 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 
 .content__video-card-description-container {
   height: 100%;
-  padding: 2px;
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 100%;
@@ -300,6 +282,6 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .content__video-card-thumbnail {
   object-fit: cover;
   object-position: center;
-  height: 100%;
-  width: 100%;
+  width: 194px;
+  height: 103px;
 }
